# OptimalGeometricLocomotion

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
examples/notebooks/: chiholonomic_problem.ipynb  geodesic_bvp_problem.ipynb  isoholonomic_periodic_problem.ipynb
examples/scripts/: Fig5chi.py  Fig5geodesic.py  Fig5periodic.py  chiholonomic_problem.py  geodesic_bvp_problem.py  isoholonomic_periodic_problem.py
pycurve/: CMakeLists.txt  README.md
pycurve/cmake/: libigl.cmake
pycurve/examples/: CMakeLists.txt  evaluateEnergy.cpp
pycurve/include/curve-energy/: auxiliary.h  bending_energy.h  curve_energy.h  membrane_energy.h
pycurve/pyexample/: curveIO.py  evaluate_energy.py
pycurve/python/: CMakeLists.txt  pycurve.cpp
pycurve/src/: auxiliary.cpp  bending_energy.cpp  bending_gradient.cpp  bending_hessian.cpp  curve_energy.cpp  membrane_energy.cpp  membrane_gradient.cpp  membrane_hessian.cpp
src/constraints/: __init__.py  constraintCenter.py  constraintEdgeLength.py  constraintMomentum.py  constraintPeriodicity.py  constraintRBM.py  constraintTotalLength.py  constraintchiRBM.py
src/energies/: __init__.py  inner_dissipation_path_energy.py  outer_dissipation.py  outer_dissipation_path_energy.py  path_energy.py
src/utils/: __init__.py  calc_utils.py  coordinatechange_utils.py  curveIO.py  curve_utils.py  visualization.py
